--- a/css/_spStyle.scss
+++ b/css/_spStyle.scss
@@ -626,22 +626,59 @@ section {
   .cItem {
     background-color: $color2;
     width: 100%;
-    height: 12vw;
+    height: 15vw;
   }
 
   .creatorContainer {
-    width: 85%;
+    width: 88%;
     margin: 15vw auto;
     background-color: $color1;
 
     .creatorBox {
       border: $color1 double 4px;
       padding: 4vw 4vw;
+
+      .cItem {
+        position: relative;
+        &:nth-child(1) {
+          img {
+            position: absolute;
+            &:nth-child(1) {
+              width: 15%;
+              bottom: 1px;
+              right: 2%;
+            }
+          }
+        }
+        &:nth-child(3) {
+          img {
+            position: absolute;
+            &:nth-child(1) {
+              width: 11%;
+              bottom: 1px;
+              right: 30%;
+            }
+
+            &:nth-child(2) {
+              width: 26.5%;
+              bottom: 1px;
+              right: 2px;
+            }
+          }
+        }
+      }
     }
     .profile {
       background-color: $color2;
       margin: 2vw 0;
-      padding: 5vw 2vw;
+      padding: 6vw 2vw;
+      font-size: 3.5vw;
+      .profileImg {
+        width: 60vw;
+        height: 40vw;
+        margin: 5vw auto;
+        border: #faebd7 2px solid;
+      }
     }
 
     .creatorSNS {
@@ -651,21 +688,66 @@ section {
       background-color: $color2;
       margin: 2vw 0;
       padding: 4vw 0 2px;
+
+      h4 {
+        font-size: 5vw;
+        border: 3px double $color1;
+        padding: 0.5vw 3vw;
+      }
     }
   }
 
   .contactContainer {
-    width: 85%;
+    width: 88%;
     margin: 36vw auto;
     background-color: $color1;
 
     .contactContents {
       text-align: center;
       padding: 4vw 4vw;
+
+      .cItem {
+        position: relative;
+        &:nth-child(1) {
+          img {
+            position: absolute;
+            &:nth-child(1) {
+              width: 12%;
+              bottom: 1px;
+              left: 3%;
+            }
+            &:nth-child(2) {
+              width: 11%;
+              bottom: 1px;
+              left: 15%;
+            }
+            &:nth-child(3) {
+              width: 26.5%;
+              bottom: 1px;
+              right: 2px;
+            }
+          }
+        }
+
+        &:nth-child(2) {
+          img {
+            &:nth-child(1) {
+              width: 9vw;
+              bottom: 1px;
+              left: 8vw;
+            }
+          }
+        }
+      }
     }
     .contactBox {
       background-color: $color2;
       margin: 2vw 0;
+      padding: 6vw 2vw;
+
+      .contactInfo {
+        margin-bottom: 3vw;
+      }
     }
 
     .inquiry {
@@ -692,6 +774,7 @@ section {
     font-size: 12vw;
     color: $color2;
     text-align: center;
+    height: 13vw;
   }
   li {
     list-style: none;
