--- a/css/style.css
+++ b/css/style.css
@@ -832,6 +832,12 @@ section {
   bottom: 1px;
   right: 2px;
 }
+#contact .creatorContainer .creatorBox .cItem:nth-child(3) .catsAnimation {
+  position: absolute;
+  top: calc(-3vw - 1px);
+  left: 14%;
+  width: 50%;
+}
 #contact .creatorContainer .profile {
   background-color: #000033;
   margin: 2vw 0;
@@ -880,7 +886,7 @@ section {
 #contact .contactContainer .contactContents .cItem:nth-child(1) img:nth-child(2) {
   width: 11%;
   bottom: 1px;
-  left: 15%;
+  left: 16.5%;
 }
 #contact .contactContainer .contactContents .cItem:nth-child(1) img:nth-child(3) {
   width: 26.5%;
