--- a/css/_headerBase.scss
+++ b/css/_headerBase.scss
@@ -116,7 +116,7 @@ header {
   margin: 10px;
   border: none;
   transition: 0.8s;
-  background: radial-gradient(#66ccff 10%, transparent 100%);
+  background: radial-gradient(#66ccff 10%, #000033bb 100%);
 
   span {
     width: 68%;
