--- a/css/_spStyle.scss
+++ b/css/_spStyle.scss
@@ -687,7 +687,7 @@ section {
       }
     }
 
-    .creatorSNS {
+    .creatorSNS ul {
       display: flex;
       justify-content: space-evenly;
       align-items: center;
@@ -782,7 +782,7 @@ section {
       color: $color1;
       text-align: center;
     }
-    .muyudoSNS {
+    .muyudoSNS ul {
       display: flex;
       justify-content: space-evenly;
       align-items: center;
