--- a/css/style.css
+++ b/css/style.css
@@ -835,6 +835,11 @@ section {
   bottom: 1px;
   right: 2px;
 }
+#contact .creatorContainer .creatorBox .cItem:nth-child(3) img:nth-child(3) {
+  width: 14%;
+  bottom: 1px;
+  left: 2px;
+}
 #contact .creatorContainer .creatorBox .cItem:nth-child(3) .catsAnimation {
   position: absolute;
   top: calc(-3.1vw - 1px);
