--- a/css/_scrollEvent.scss
+++ b/css/_scrollEvent.scss
@@ -49,10 +49,21 @@
 }
 
 #about.scOn {
+  h2 {
+    opacity: 1;
+    transform: translate(0, 0);
+    filter: blur(0);
+  }
   .rantan {
     .light {
       animation: lightOn 3s 1.5s linear forwards;
     }
+  }
+}
+
+.cItem.scOn {
+  .light {
+    animation: lightOn 3s 1.5s linear forwards;
   }
 }
 
@@ -74,5 +85,13 @@
   }
   100% {
     opacity: 1;
+  }
+}
+
+.workSpace.scOn {
+  h2 {
+    opacity: 1;
+    filter: blur(0);
+    transform: scale(1);
   }
 }
