--- a/css/_pcStyle.scss
+++ b/css/_pcStyle.scss
@@ -68,13 +68,14 @@
 
     .about_catch {
       font-size: 3vw;
-      top: 7vw;
-      right: 22%;
+      top: 6vw;
+      left: 48%;
     }
 
     .about_text {
-      top: 25vw;
-      right: 22%;
+      font-size: 1.2vw;
+      top: 23vw;
+      left: 48%;
       width: 35vw;
       height: 15vw;
 
