--- a/css/_spStyle.scss
+++ b/css/_spStyle.scss
@@ -295,56 +295,24 @@ section {
 
   .about_catch {
     position: absolute;
-    top: 40vw;
-    right: 8%;
-    font-size: 6.5vw;
+    top: 38vw;
+    left: 31.5%;
+    font-size: 6.8vw;
     color: #faebd7;
     font-family: "New Tegomin", serif;
     text-shadow: 1px 1px 4px #ffffff99;
-
-    span {
-      &:nth-child(2) {
-        padding-left: 4vw;
-      }
-      &:nth-child(4) {
-        padding-left: 20vw;
-      }
-    }
   }
   .about_text {
+    font-size: 3.8vw;
     position: absolute;
-    top: 85vw;
-    right: 10%;
-    padding: 5vw;
+    top: 75.5vw;
+    left: 31.5%;
     color: $color1;
-    width: 50vw;
-    height: 60vw;
-    border-radius: 10px;
-    border: 1px solid $color1;
+    width: 65vw;
+
     font-family: "New Tegomin", serif;
-
-    &::before {
-      content: "";
-      background-image: url(../img/frame/flame1.png);
-      transform: rotate(180deg);
-      position: absolute;
-      top: -6vw;
-      right: -6vw;
-      width: 15vw;
-      height: 15vw;
-      background-size: cover;
-    }
-
-    &::after {
-      content: "";
-      background-image: url(../img/frame/flame1.png);
-
-      position: absolute;
-      bottom: -6vw;
-      left: -6vw;
-      width: 15vw;
-      height: 15vw;
-      background-size: cover;
+    p {
+      margin-bottom: 2vw;
     }
   }
 }
@@ -760,7 +728,7 @@ section {
               left: 16.5%;
             }
             &:nth-child(3) {
-              width: 26.5%;
+              width: 18%;
               bottom: 1px;
               right: 2px;
             }
