--- a/css/_pcStyle.scss
+++ b/css/_pcStyle.scss
@@ -322,20 +322,27 @@ $color2: #000033;
         }
 
         .profile {
+          position: relative;
           margin: 0.5vw 0;
-          padding: 1.5vw 3vw;
+          padding: 4.8vw 3vw 1.5vw;
           font-size: 1.2vw;
+
           h3 {
-            font-size: 4vw;
+            font-size: 2.8vw;
+            margin-left: 5vw;
           }
           h4 {
-            font-size: 2.4vw;
+            font-size: 2vw;
           }
           .profileImg {
             width: 24vw;
             height: 16vw;
             margin: 1.8vw auto 3vw;
             border: #faebd7 2px solid;
+          }
+
+          .profileInfo {
+            font-size: 1.2vw;
           }
         }
       }
@@ -377,6 +384,15 @@ $color2: #000033;
 
         .contactBox {
           margin: 1vw 0;
+          position: relative;
+          .contactInfo {
+            font-size: 2.1vw;
+          }
+        }
+        .inquiry {
+          font-size: 3vw;
+          padding: 1vw;
+          width: 30vw;
         }
       }
     }
@@ -387,6 +403,16 @@ $color2: #000033;
     }
     li {
       width: 3vw;
+    }
+    h2 {
+      color: $color1;
+      font-size: 8vw;
+      height: initial;
+      position: absolute;
+      top: -3vw;
+      left: 50%;
+      transform: translate(-50%, 0);
+      opacity: 0.2;
     }
   }
 }
