fontなどの調整

--- a/css/_pcStyle.scss
+++ b/css/_pcStyle.scss
@@ -388,6 +388,12 @@ $color2: #000033;
           .contactInfo {
             font-size: 2.1vw;
           }
+
+          .muyudoSNS {
+            h3 {
+              font-size: 2vw;
+            }
+          }
         }
         .inquiry {
           font-size: 3vw;
@@ -397,10 +403,6 @@ $color2: #000033;
       }
     }
 
-    h2 {
-      font-size: 3.4vw;
-      height: 3.2vw;
-    }
     li {
       width: 3vw;
     }
