--- a/css/_spStyle.scss
+++ b/css/_spStyle.scss
@@ -675,6 +675,7 @@ section {
       font-size: 3.5vw;
       h3 {
         font-size: 8vw;
+        font-family: isemin, sans-serif;
       }
       .profileImg {
         width: 60vw;
@@ -684,6 +685,7 @@ section {
       }
       .profileInfo {
         text-align: center;
+        font-family: new-tegomin, sans-serif;
       }
     }
 
@@ -778,6 +780,7 @@ section {
 
       .contactInfo {
         margin-bottom: 3vw;
+        font-family: new-tegomin, sans-serif;
       }
     }
 
@@ -790,6 +793,7 @@ section {
       text-decoration: none;
       color: $color1;
       text-align: center;
+      font-family: isemin, sans-serif;
     }
     .muyudoSNS ul {
       display: flex;
