--- a/css/style.css
+++ b/css/style.css
@@ -701,6 +701,7 @@ section {
   border: #66ccff double 4px;
   color: #66ccff;
   font-family: new-tegomin, sans-serif;
+  cursor: pointer;
 }
 #works .works_container .zakkaSpace .viewmore::before, #works .works_container .zakkaSpace .viewmore::after {
   position: absolute;
@@ -1325,6 +1326,78 @@ footer {
     left: 50%;
     transform: translate(-50%, 0);
     opacity: 0.2;
+  }
+}
+.modal {
+  position: relative;
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 9999;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.14);
+  overflow: auto;
+}
+.modal .modalcontent {
+  position: relative;
+  width: 90%;
+  height: 80%;
+  margin: 10vh auto 0;
+  background-color: #66ccff;
+  padding: 5%;
+  -webkit-animation: modalopen 0.7s ease 0s 1 normal forwards running;
+          animation: modalopen 0.7s ease 0s 1 normal forwards running;
+}
+.modal .modalcontent .modoru_btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 2.2vw;
+  display: block;
+  padding: 0 0.5vw;
+  border: #000033 solid 3px;
+  background-color: #66ccff;
+  color: #000033;
+  cursor: pointer;
+}
+
+@-webkit-keyframes modalopen {
+  0% {
+    opacity: 0;
+    transform: matrix(0.5, 0, 0, 0.5, 0, -100);
+  }
+  20% {
+    opacity: 0.3;
+    transform: matrix(0.5, 0, 0, 1.5, 0, -50);
+  }
+  60% {
+    opacity: 1;
+    transform: matrix(1.1, 0, 0, 1, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    transform: matrix(1, 0, 0, 1, 0, 0);
+  }
+}
+
+@keyframes modalopen {
+  0% {
+    opacity: 0;
+    transform: matrix(0.5, 0, 0, 0.5, 0, -100);
+  }
+  20% {
+    opacity: 0.3;
+    transform: matrix(0.5, 0, 0, 1.5, 0, -50);
+  }
+  60% {
+    opacity: 1;
+    transform: matrix(1.1, 0, 0, 1, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    transform: matrix(1, 0, 0, 1, 0, 0);
   }
 }
 /*# sourceMappingURL=style.css.map */
