--- a/css/_modal.scss
+++ b/css/_modal.scss
@@ -16,19 +16,46 @@
     height: 80%;
     margin: 10vh auto 0;
     background-color: #66ccff;
+    color: #000033;
     padding: 5%;
     animation: modalopen 0.7s ease 0s 1 normal forwards running;
     .modoru_btn {
       position: absolute;
       top: 0;
       right: 0;
-      font-size: 2.2vw;
+      font-size: 24px;
       display: block;
-      padding: 0 0.5vw;
+      padding: 0 8px;
       border: #000033 solid 3px;
       background-color: #66ccff;
       color: #000033;
       cursor: pointer;
+    }
+    .comingSoon {
+      font-size: 32px;
+      font-family: isemin, sans-serif;
+      margin-bottom: 0.5em;
+    }
+    .modalInfo {
+      font-size: 13px;
+      font-weight: bolder;
+      font-family: new-tegomin, sans-serif;
+      margin-bottom: 1em;
+    }
+    .temporaryContents {
+      border: #000033 solid 3.5px;
+      width: 100%;
+      height: 68%;
+      overflow-y: scroll;
+      padding: 16px;
+
+      .modaltitle {
+        font-size: 24px;
+      }
+      ul {
+        padding-left: 16px;
+        font-size: 13px;
+      }
     }
   }
 }
@@ -52,5 +79,43 @@
   100% {
     opacity: 1;
     transform: matrix(1, 0, 0, 1, 0, 0);
+  }
+}
+
+@media screen and (min-width: 1030px) {
+  .modal {
+    .modalcontent {
+      padding: 1% 8%;
+
+      .modoru_btn {
+        font-size: 40px;
+
+        padding: 0 11px;
+      }
+      .comingSoon {
+        font-size: 38px;
+
+        margin-bottom: 0.2em;
+      }
+      .modalInfo {
+        font-size: 16px;
+
+        margin-bottom: 0.5em;
+      }
+      .temporaryContents {
+        border: #000033 solid 4.5px;
+        width: 100%;
+        height: 68%;
+        padding: 16px;
+
+        .modaltitle {
+          font-size: 28px;
+        }
+        ul {
+          padding-left: 20px;
+          font-size: 18px;
+        }
+      }
+    }
   }
 }
