モーダルの文言暫定

--- a/css/_modal.scss
+++ b/css/_modal.scss
@@ -12,7 +12,7 @@
 
   .modalcontent {
     position: relative;
-    width: 90%;
+    width: 95%;
     height: 80%;
     margin: 10vh auto 0;
     background-color: #66ccff;
@@ -50,11 +50,24 @@
       padding: 16px;
 
       .modaltitle {
-        font-size: 24px;
+        font-size: 8vw;
+        font-family: isemin, sans-serif;
+      }
+      .temporaryInfo {
+        font-weight: bold;
+      }
+      p {
+        margin: 1vw 0;
+        font-family: new-tegomin, sans-serif;
+        font-size: 3.5vw;
+      }
+      .modalListTitle {
+        font-size: 8vw;
+        font-weight: bolder;
       }
       ul {
         padding-left: 16px;
-        font-size: 13px;
+        font-size: 3.2vw;
       }
     }
   }
@@ -86,7 +99,7 @@
   .modal {
     .modalcontent {
       padding: 1% 8%;
-
+      width: 90%;
       .modoru_btn {
         font-size: 40px;
 
@@ -106,11 +119,18 @@
         border: #000033 solid 4.5px;
         width: 100%;
         height: 68%;
-        padding: 16px;
+        padding: 16px 5vw;
 
         .modaltitle {
-          font-size: 28px;
+          font-size: 3vw;
         }
+        .temporaryInfo {
+          font-size: 1.2vw;
+        }
+        .modalListTitle {
+          font-size: 3vw;
+        }
+
         ul {
           padding-left: 20px;
           font-size: 18px;
