メール送信後のレイアウト修正

--- a/mailform/css/mailstyle.css
+++ b/mailform/css/mailstyle.css
@@ -74,16 +74,34 @@ footer {
 
 .confirmContainer {
   width: 90%;
-  margin: 15% auto;
+  margin: 35% auto 0;
   padding: 12px;
   border: #66ccff solid 5px;
+  text-align: center;
 }
 .confirmContainer h1 {
   font-size: 10vw;
   font-family: isemin, sans-serif;
 }
 .confirmContainer .confirmMessage {
-  font-size: 6vw;
+  font-size: 5vw;
   font-family: new-tegomin, sans-serif;
+}
+
+@media screen and (min-width: 1030px) {
+  .confirmContainer {
+    width: 75%;
+    margin: 16% auto 0;
+    padding: 25px;
+    border: #66ccff solid 8px;
+  }
+  .confirmContainer h1 {
+    font-size: 6.5vw;
+    font-family: isemin, sans-serif;
+  }
+  .confirmContainer .confirmMessage {
+    font-size: 2.4vw;
+    font-family: new-tegomin, sans-serif;
+  }
 }
 /*# sourceMappingURL=mailstyle.css.map */
