--- a/mailform/css/mailstyle.scss
+++ b/mailform/css/mailstyle.scss
@@ -73,15 +73,33 @@ footer {
 // --------送信後
 .confirmContainer {
   width: 90%;
-  margin: 15% auto;
+  margin: 35% auto 0;
   padding: 12px;
   border: #66ccff solid 5px;
+  text-align: center;
   h1 {
     font-size: 10vw;
     font-family: isemin, sans-serif;
   }
   .confirmMessage {
-    font-size: 6vw;
+    font-size: 5vw;
     font-family: new-tegomin, sans-serif;
+  }
+}
+
+@media screen and (min-width: 1030px) {
+  .confirmContainer {
+    width: 75%;
+    margin: 16% auto 0;
+    padding: 25px;
+    border: #66ccff solid 8px;
+    h1 {
+      font-size: 6.5vw;
+      font-family: isemin, sans-serif;
+    }
+    .confirmMessage {
+      font-size: 2.4vw;
+      font-family: new-tegomin, sans-serif;
+    }
   }
 }
