--- a/css/_spStyle.scss
+++ b/css/_spStyle.scss
@@ -472,6 +472,7 @@ section {
         border: $color1 double 4px;
         color: $color1;
         font-family: new-tegomin, sans-serif;
+        font-size: 3.6vw;
         cursor: pointer;
 
         &::before,
