--- a/css/_pcStyle.scss
+++ b/css/_pcStyle.scss
@@ -176,6 +176,8 @@ $color2: #000033;
         height: 9vw;
         .viewmore {
           right: 8vw;
+          font-size: 1.2vw;
+          width: 9vw;
         }
       }
     }
