--- a/css/_spStyle.scss
+++ b/css/_spStyle.scss
@@ -473,6 +473,8 @@ section {
         color: $color1;
         font-family: new-tegomin, sans-serif;
         font-size: 3.6vw;
+        width: 32vw;
+        text-align: center;
         cursor: pointer;
 
         &::before,
